<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AlertDialog.AppCompat.Light"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <lib.common.button.CMenuButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:color_disable="@color/grey"
            app:disable="true"
            app:srcCompat="@drawable/returntohome" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/return_to_home"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />
    </LinearLayout>

    <lib.common.layout.LinearLayoutBorder
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:paddingLeft="6dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <lib.common.button.CMenuButton
                android:id="@+id/idCancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:color_up="@color/grey"
                app:srcCompat="@drawable/cancel" />

            <TextView
                android:id="@+id/textReturnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@android:string/cancel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"

            android:layout_weight="1"
            android:orientation="vertical">

            <lib.common.button.CMenuButton
                android:id="@+id/idSaveAndExit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:color_up="@color/grey"
                app:srcCompat="@drawable/returnwithsave" />

            <TextView
                android:id="@+id/textReturnSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/save_return"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:paddingRight="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <lib.common.button.CMenuButton
                android:id="@+id/idExit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:color_up="@color/grey"
                app:srcCompat="@drawable/returnwithoutsave" />

            <TextView
                android:id="@+id/textReturnNotSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/return_without_save"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

        </LinearLayout>
    </lib.common.layout.LinearLayoutBorder>
</LinearLayout>
